﻿10.11 -> 10.12
XX/XX/2018

IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.

Balance:
 • More frequent re-aiming (each frame) + starts targetting before units enters range (at maxrange + 10%)
 • EMP spider auto heals itself with 15hp per second (ba9.37 had 30 before it was removed)
 • Arm Missile Ship damages increased 800 -> 900 (damages vs commanders unchanged)
 • Toaster range 1335 => 1390, Ambusher range 1320 => 1380
 • MERL range 1215 -> 1300, Diplomat range 1240 -> 1310
 • Ships/Sea wrecks durability increased ("health" + 100%)

Other:
 • Added option "Resolution" (might freeze engine, fixed in version 104.0.1.670)
 • Added option "Move Window Position"
 • Added option "Contain mouse inside window"
 • Added options "Camera smoothing" and "Tracking cam smoothing" slider
 • Added option "Tree Wind" (before it was only active when barmodels enabled)
 • Player camara tracking also limits view to players viewpoint and losmode
 • Resource bars: when low energy: red background, when overflowing: resource colored
 • Advplayerlist auto collapses, availible in options: Interface -> "Playerlist auto collapses"
 • Changed some air thrusters sizes and they wont show when plane is crashing
 • Added lups thrusters to armatlas/corvalk/banshee
 • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
 • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'
 • Added the "Traitor" award = destroying allied units.
 • Unit stats show again when having unit selected (unless you have chat input showing)
 • Toggle the background for chat console optionally with /chatbackground

Fixes:
 • Options widget remembers/restores some spring config settings (switching engines lately made config be reset)
 • Auto closing game when loaded unsupported AI (supported: DAI, KAIK, NullAI, Chickens)
 • Fixed DAI echospam + working with multiple DAI bots + behavior improvements