@@ -113,19 +113,20 @@ return {
 			},
 		},
 		weapondefs = {
-			armmship_rocket = {
-				cegTag = "missiletrailmedium-starburst",
+			rocket = {
+				cegTag = "missiletrailcorroyspecial",
 				explosiongenerator = "custom:genericshellexplosion-large-bomb",
-				areaofeffect = 120,
+				areaofeffect = 300,
 				avoidfeature = false,
 				burnblow = true,
-				craterareaofeffect = 120,
+				craterareaofeffect = 300,
 				craterboost = 0,
 				cratermult = 0,
 				edgeeffectiveness = 0.5,
 				energypershot = 100,
 				firestarter = 100,
 				flighttime = 15,
+				hightrajectory = 1,
 				impulseboost = 0.123,
 				impulsefactor = 0.123,
 				metalpershot = 0,
@@ -146,11 +147,74 @@ return {
 				turnrate = 24384,
 				weaponacceleration = 80,
 				weapontimer = 5,
-				weapontype = "StarburstLauncher",
+				weapontype = "Cannon",
 				weaponvelocity = 400,
 				damage = {
-					commanders = 500,
-					default = 900,
+					commanders = 350,
+					default = 650,
+					subs = 5,
+				},
+				customparams = {
+					--customized weapondefs
+					speceffect = "split",
+					when = "yvel<0",
+					number = "6",
+					def = "armmship_rocket_split",
+					model = "bomb",
+					cegtag = "missiletrailcorroyspecial",
+					splitexplosionceg = "genericshellexplosion-medium",
+					--end
+					bar_model = "corshiprocket.s3o",
+					light_mult = 2.6,
+					light_radius_mult = 1.2,
+					light_color = "1 0.6 0.15",
+					expl_light_mult = 1.2,
+					expl_light_radius_mult = 1.25,
+					expl_light_life_mult = 1.25,
+                    expl_light_color = "1 0.5 0.05",
+					expl_light_heat_radius_mult = 3,
+                },
+			},
+			rocket_split = {
+				cegTag = "missiletrailcorroyspecial",
+				explosiongenerator = "custom:genericshellexplosion-medium-bomb",
+				areaofeffect = 60,
+				avoidfeature = false,
+				burnblow = true,
+				burst = 6,
+				burstrate = 0.1,
+				craterareaofeffect = 60,
+				craterboost = 0,
+				cratermult = 0,
+				edgeeffectiveness = 0.5,
+				energypershot = 100,
+				firestarter = 100,
+				flighttime = 15,
+				impulseboost = 0.123,
+				impulsefactor = 0.123,
+				metalpershot = 0,
+				model = "bomb",
+				name = "Heavy long-range g2g ballistic missile launcher",
+				noselfdamage = true,
+				range = 1550,
+				reloadtime = 6,
+				soundhit = "xplomed4",
+				soundhitwet = "splsmed",
+				soundhitwetvolume = 0.5,
+				soundstart = "Rockhvy1",
+				smoketrail = false,
+				texture1 = "trans",
+				texture2 = "null",
+				texture3 = "null",
+				tolerance = 4000,
+				turnrate = 24384,
+				weaponacceleration = 80,
+				weapontimer = 5,
+				weapontype = "Cannon",
+				weaponvelocity = 400,
+				damage = {
+					commanders = 200,
+					default = 300,
 					subs = 5,
 				},
 				customparams = {
@@ -165,7 +229,7 @@ return {
 					expl_light_heat_radius_mult = 3,
                 },
 			},
-			armmship_missile = {
+			missile = {
 				areaofeffect = 96,
 				avoidfeature = false,
 				canattackground = false,
@@ -214,11 +278,11 @@ return {
 		weapons = {
 			[1] = {
 				badtargetcategory = "MOBILE",
-				def = "ARMMSHIP_ROCKET",
+				def = "ROCKET",
 				onlytargetcategory = "SURFACE",
 			},
 			[3] = {
-				def = "ARMMSHIP_MISSILE",
+				def = "MISSILE",
 				onlytargetcategory = "VTOL",
 			},
 		},
