@@ -111,7 +111,7 @@ return {
 			},
 		},
 		weapondefs = {
-			armship_missile = {
+			missile = {
 				areaofeffect = 48,
 				avoidfeature = false,
 				canattackground = false,
@@ -158,18 +158,19 @@ return {
                     expl_light_color = "1 0.4 0.5",
 				},
 			},
-			cormship_rocket = {
-				areaofeffect = 96,
+			rocket = {
+				areaofeffect = 300,
 				avoidfeature = false,
 				burnblow = true,
 				craterareaofeffect = 96,
 				craterboost = 0,
 				cratermult = 0,
 				energypershot = 100,
-				cegTag = "missiletrailmedium-starburst",
+				cegTag = "missiletrailcorroyspecial",
 				explosiongenerator = "custom:genericshellexplosion-large-bomb",
 				firestarter = 100,
 				flighttime = 15,
+				hightrajectory = 1,
 				impulseboost = 0.123,
 				impulsefactor = 0.123,
 				metalpershot = 0,
@@ -190,11 +191,73 @@ return {
 				turnrate = 24384,
 				weaponacceleration = 75,
 				weapontimer = 5,
-				weapontype = "StarburstLauncher",
+				weapontype = "Cannon",
 				weaponvelocity = 480,
 				damage = {
 					commanders = 500,
 					default = 1100,
+					subs = 5,
+				},
+				customparams = {
+					--customized weapondefs
+					speceffect = "split",
+					when = "yvel<0",
+					number = "8",
+					def = "cormship_rocket_split",
+					model = "bomb",
+					cegtag = "missiletrailcorroyspecial",
+					splitexplosionceg = "genericshellexplosion-medium",
+					--end
+					bar_model = "corshiprocket.s3o",
+					light_mult = 3,
+					light_radius_mult = 1.2,
+					light_color = "1 0.6 0.15",
+					expl_light_mult = 1.2,
+					expl_light_radius_mult = 1.25,
+					expl_light_life_mult = 1.25,
+					expl_light_color = "1 0.5 0.05",
+					expl_light_heat_radius_mult = 3,
+                },
+			},
+			rocket_split = {
+				areaofeffect = 54,
+				avoidfeature = false,
+				burnblow = true,
+				burst = 8,
+				burstrate = 0.1,
+				craterareaofeffect = 54,
+				craterboost = 0,
+				cratermult = 0,
+				energypershot = 100,
+				cegTag = "missiletrailcorroyspecial",
+				explosiongenerator = "custom:genericshellexplosion-medium-bomb",
+				firestarter = 100,
+				flighttime = 15,
+				impulseboost = 0.123,
+				impulsefactor = 0.123,
+				metalpershot = 0,
+				model = "bomb",
+				name = "Heavy long-range g2g ballistic missile launcher",
+				noselfdamage = true,
+				range = 1550,
+				reloadtime = 8,
+				soundhit = "xplomed4",
+				soundhitwet = "splslrg",
+				soundhitwetvolume = 0.5,
+				soundstart = "Rockhvy1",
+                smoketrail = false,
+				texture1 = "trans",
+                texture2 = "null",
+                texture3 = "null",
+				tolerance = 4000,
+				turnrate = 24384,
+				weaponacceleration = 75,
+				weapontimer = 5,
+				weapontype = "Cannon",
+				weaponvelocity = 480,
+				damage = {
+					commanders = 200,
+					default = 300,
 					subs = 5,
 				},
 				customparams = {
@@ -213,11 +276,11 @@ return {
 		weapons = {
 			[1] = {
 				badtargetcategory = "MOBILE",
-				def = "CORMSHIP_ROCKET",
+				def = "ROCKET",
 				onlytargetcategory = "SURFACE",
 			},
 			[3] = {
-				def = "ARMSHIP_MISSILE",
+				def = "MISSILE",
 				onlytargetcategory = "VTOL",
 			},
 		},
