@@ -2,6 +2,7 @@
 XX/XX/2018
 
 IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.
+ • Testing splitting ballistic missiles on missile ships
 
 Balance:
  • More frequent re-aiming (each frame) + starts targetting before units enters range (at maxrange + 10%)
